Remove get all projects feature as per #32
