# server/swagger.json
@@ -211,23 +211,6 @@
                 }
             }
         },
-        "/projects": {
-            "get": {
-                "summary": "Get all projects",
-                "produces": ["application/json"],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/projectResponse"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/projects/delete/{id}": {
             "delete": {
                 "summary": "Delete a project",
